--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -2,21 +2,11 @@
     <div class="card register-card m-5 mx-auto my-auto w-auto w-lg-100">
         <div class="row">
             <div class="col-12 px-5 py-4">
-                <h2 style="font-size: 50px;" class="card-title text-center mt-3 mb-5">Sign up</h2>
+                <h2 style="font-size: 50px;" class="card-title text-center mt-3 mb-4">Sign up</h2>
                 <form [formGroup]="detailsForm" (ngSubmit)="submitForm()">
                     <div class="card-text">
                         <div class="row">
-                            <div class="col-5 col-md-4 mb-2">
-                                <mdb-icon fas icon="caret-down" class="prefix"></mdb-icon>&nbsp;
-                                <label>Gender</label>
-                                <select formControlName="gender" class="browser-default custom-select">
-                                    <option  value="" disabled>Select</option>
-                                    <option value="Mr">Mr</option>
-                                    <option value="Mrs">Mrs</option>
-                                    <option value="Ms">Ms</option>
-                                </select>
-                            </div>
-                            <div class="col-7 col-md-8 mb-2">
+                            <div class="col-12 col-md-12 mb-2">
                                 <div class="form-group">
                                     <mdb-icon fas icon="user" class="prefix"></mdb-icon>&nbsp;
                                     <label for="form2">Full Name</label>
@@ -46,6 +36,21 @@
                                         <option *ngFor="let item of countryList" [value]="item.name">{{item.name}}</option>
                                     </select>
                                 </div>
+                            </div>
+                            <div class="col-6 col-md-6 mb-2">
+                                <mdb-icon fas icon="caret-down" class="prefix"></mdb-icon>&nbsp;
+                                <label>Gender</label>
+                                <select formControlName="gender" class="browser-default custom-select">
+                                    <option  value="" disabled>Select</option>
+                                    <option value="Mr">Mr</option>
+                                    <option value="Mrs">Mrs</option>
+                                    <option value="Ms">Ms</option>
+                                </select>
+                            </div>
+                            <div class="col-6 col-md-6 mb-2">
+                                <mdb-icon fas icon="calendar-day" class="prefix"></mdb-icon>&nbsp;
+                                <label for="form9">Age</label>
+                                <input type="number" id="form9" formControlName="age" placeholder="Enter age" class="form-control">
                             </div>
                             <div class="col-12 col-md-6 mb-2">
                                 <div class="form-group">
