--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -1,6 +1,6 @@
 <div class="mb-5 dealtop">
     <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
 
             <div class="create-font mx-5 mb-2 text-center">Create your deals</div>
             <div class="mx-5 text-center">Let Voila help you make your own tour package/deal according to your preferences</div>
@@ -9,7 +9,7 @@
                 <button type="button" mdbBtn (click)="basicModal.show()" style="background-color:#faed26;" class="btn btn-lg" mdbWavesEffect>Create Deal</button>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
             <img src="assets\images\abstract-success.png" class="float-right my-4" style="height: 300px; width:auto">
         </div>
     </div>
