tourists login complete

--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -9,23 +9,18 @@
         <div class="text-center">
             <button mdbBtn type="button" (click)="navigateToRegisterPage()" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Get Started!</button>
         </div>
-
-
     </div>
 </div>
 <div class="my-5 text-center">
     <h1><b>Voila!</b></h1>
     <div>Its a platform that empowers locals, like you to earn money by hosting tours and experiences in their city.</div>
-
 </div>
 <div class="parallax p2">
-
 </div>
-
 <div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>Perks of being a Voila Guide</b></h1>
     <div class="row">
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon far icon="smile-beam" size="2x"></mdb-icon>
             </div>
@@ -35,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon fas icon="couch" size="2x"></mdb-icon>
             </div>
@@ -45,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon fas icon="heart" size="2x"></mdb-icon>
             </div>
@@ -59,13 +54,11 @@
 </div>
 
 <div class="parallax p3">
-
 </div>
-
 <div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>What Voila offers you</b></h1>
     <div class="row">
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -76,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -87,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -101,27 +94,24 @@
     </div>
 </div>
 
-<div class="my-5 text-center bgclass white-text" style="padding:0 100px 45px 100px">
+<div class="my-5 text-center bgclass white-text getStartedBlock" >
     <h1 class="py-4"><b>Let's get started!</b></h1>
     <div class="row pb-3">
-        <div class="col-md-4 px-3">
+        <div class=" col-12 col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">1
-
                 <strong style="position:absolute; top: 25%; font-size:30px; font-weight: 200;">Create your Voila account</strong>
             </div>
-
             <div style="font-size:18px;">
                 Sign up and set up your profile. Already have an account? Then, let’s get started with your host application.
             </div>
         </div>
-
-        <div class="col-md-4 px-3">
+        <div class="col-12 col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">2
                 <strong style="position:absolute; font-size:30px; font-weight: 200;">Answer a simple questionnaire</strong>
             </div>
             <div style="font-size:18px;">We want to know more from you. It will help us get an idea of what you are really passionate about.</div>
         </div>
-        <div class="col-md-4 px-3">
+        <div class="col-12 col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">3
                 <strong style="position:absolute; top: 25%; font-size:30px; font-weight: 200;">We’ll be in touch</strong>
             </div>
@@ -134,7 +124,7 @@
 <div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>Your Voila options</b></h1>
     <div class="row">
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <strong style="font-size:20px;">Voila Originals</strong>
                 <div>
@@ -142,7 +132,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <strong style="font-size:20px;">Personal host offers</strong>
                 <div>
@@ -150,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4  shows">
+        <div class="col-md-4 px-4 shows">
             <div>
                 <strong style="font-size:20px;">Best of both worlds</strong>
                 <div>
@@ -158,5 +148,10 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <app-footer></app-footer>
     </div>
 </div>
