--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -29,4 +29,9 @@
       <app-features></app-features>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12">
+      <app-footer></app-footer>
+    </div>
+  </div>
 </div>
