--- a/src/app/modules/tourists/components/dashboard/dashboard.component.html
+++ b/src/app/modules/tourists/components/dashboard/dashboard.component.html
@@ -1,16 +1,22 @@
 <div class="row">
-  <div class="col-md-12">
-    <app-filter-form></app-filter-form>
-    <!-- <button type="button" class="btn btn-success" (click)="navigateOnResultPage()">Search</button> -->
-  </div>
+    <div class="col-md-12">
+        <app-filter-form></app-filter-form>
+        <!-- <button type="button" class="btn btn-success" (click)="navigateOnResultPage()">Search</button> -->
+    </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
-    <app-top-cities></app-top-cities>
-  </div>
+    <div class="col-md-12">
+        <app-top-cities></app-top-cities>
+    </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
-    <app-map></app-map>
-  </div>
+    <div class="col-md-12">
+        <app-map></app-map>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <app-interests></app-interests>
+    </div>
 </div>
