--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -229,7 +229,7 @@
   <div class="row card-body mx-0">
     <div class="col-md-12">
       <button class="btn btn-success" type="button" previousStep>Previous</button>
-      <button class="btn btn-success" type="button" (click)="finalSubmit()" >Next</button>
+      <button class="btn btn-success" type="button" nextStep (click)="finalSubmit()" >Next</button>
     </div>
   </div>
 
