--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -140,7 +140,7 @@
           <!--  -->
           <div class="row card-body mx-0">
             <div class="col-md-12">
-              <button class="btn btn-success" (click)="submitPersonalDetails()" type="button" >Next</button>
+              <button class="btn btn-success" (click)="submitPersonalDetails()" nextStep type="button" >Next</button>
             </div>
           </div>
         </form>
