--- a/src/app/modules/tourists/components/dashboard/dashboard.component.html
+++ b/src/app/modules/tourists/components/dashboard/dashboard.component.html
@@ -1,16 +1,32 @@
-<div class="row">
-  <div class="col-md-12">
-    <app-filter-form></app-filter-form>
-    <!-- <button type="button" class="btn btn-success" (click)="navigateOnResultPage()">Search</button> -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <app-home-carousel></app-home-carousel>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <app-top-cities></app-top-cities>
+  <div class="row">
+    <div class="col-12">
+      <app-filter-form></app-filter-form>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <app-map></app-map>
+  <div class="row">
+    <div class="col-12">
+      <app-top-cities></app-top-cities>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-map></app-map>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-top-deals></app-top-deals>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-footer></app-footer>
+    </div>
   </div>
 </div>
