--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -289,16 +289,16 @@ label {
     // width:100%;
     // margin:auto;
     // min-width: 100wv;
-    min-height:89.5vh;
-    position:relative;
+    // min-height:89.5vh;
+    // position:relative;
     background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
     background-size: cover;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
   }
   .login-html1{
     width:100%;
-    height:100%;
-    position:absolute;
+    // height:100%;
+    // position:absolute;
     padding: 50px 70px 20px 70px;
     background:rgba(40,57,101,.9);
   }
@@ -306,8 +306,8 @@ label {
   @media(max-width: 425px) {
     .login-html1{
       width:100%;
-      height:100%;
-      position:absolute;
+      // height:100%;
+      // position:absolute;
       padding: 50px 40px 20px 40px;
       background:rgba(40,57,101,.9);
     }
