--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -58,8 +58,9 @@
            <div class="form-group">
              <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>&nbsp;
              <label for="form6">Profile Image</label><br>
-             <img [src]="url" height="200"> <br/>
-             <input type='file' accept="image/*" (change)="onSelectFile($event)">
+             <!-- <img [src]="url" height="200"> <br/>
+             <input type='file' accept="image/*" (change)="onSelectFile($event)"> -->
+             <input type='file' accept="image/*">
            </div>
           </div>
         </div>
