--- a/src/app/modules/guide/pages/interests/interests.component.html
+++ b/src/app/modules/guide/pages/interests/interests.component.html
@@ -1,7 +1,8 @@
-<h1 class="headup my-4"> Select your Interests</h1>
+<div class="card card-body pannel" >
+  <h2 style="font-size: 50px;" class="card-title text-center mt-3 mb-4">Select Your Intrests</h2>
 <div class="mx-lg-4">
     <div class="row my-4">
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style=" background-image: linear-gradient(45deg, rgb(35,36,58),rgb(77,241,192));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -14,7 +15,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style="background-image: linear-gradient(45deg, rgb(44,17,17),rgb(249,52,52));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -27,7 +28,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style="background-image: linear-gradient(45deg, rgb(25,31,68),rgb(169,249,52));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -39,7 +40,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style=" background-image: linear-gradient(45deg, rgb(40, 23, 76),rgb(232, 90, 94));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -51,9 +52,7 @@
             </mdb-card>
 
         </div>
-    </div>
-    <div class="row my-4">
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style="background-image: linear-gradient(45deg, rgb(23,12,40),rgb(229,170,255));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -66,7 +65,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style=" background-image: linear-gradient(45deg, rgb(48,47,20),rgb(245,241,15));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -79,7 +78,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style="background-image: linear-gradient(45deg, rgb(12,18,40),rgb(255,146,31));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -91,7 +90,7 @@
             </mdb-card>
 
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-4 col-6 mb-4">
             <mdb-card style="background-image: linear-gradient(45deg, rgb(12,24,52),rgb(143,185,225));">
                 <mdb-card-body class="waves-effect waves-light">
 
@@ -104,4 +103,11 @@
 
         </div>
     </div>
+</div>
+<div class="row card-body mx-0">
+  <div class="col-md-12">
+    <button class="btn btn-success" type="button" previousStep>Previous</button>
+    <button class="btn btn-success" type="button" nextStep >Next</button>
+  </div>
+</div>
 </div>
