--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -64,7 +64,7 @@ body {
     width: 650px;
     min-height: 80vh;
     // height: 550px;
-    position: relative;
+    // position: relative;
     margin-bottom: 0 !important;
 }
 
@@ -73,7 +73,7 @@ body {
     width: 650px;
     height: 415px;
     position: absolute;
-    top: 14%;
+    top: 22%;
     border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .1);
 }
