--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,6 +1,6 @@
 <!-- side navbar -->
-<div class="row d-none d-lg-flex" style="overflow: hidden;">
-    <div class="col-3 pr-0 ">
+<div class="row" style="overflow: hidden;">
+    <div class="col-3 pr-0  d-none d-lg-flex">
         <div class="navside py-3 ">
             <div class="row">
                 <div class="col-md-12 text-center">
